# assistant_bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/bot/: __init__.py  bot.py  bot_messages.py  database.py  llm.py  photo_handler.py  session.py  voice_handler.py  yandex_auth_manager.py
src/bot/database/: database.py  models.py
src/bot/migrations/: migrate.py
tests/: conftest.py  test_bot.py  test_bot_handlers.py  test_database.py  test_photo_handler.py  test_session.py
